# tinsmith

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
src/tinsmith/: __init__.py
src/tinsmith/project/: __init__.py  core.py
