[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinsmith"
version = "0.0.1"
description = "Early-stage experimental library."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Julius B. Garben"}]

dependencies = []

[project.urls]
Homepage = "https://github.com/jbgarben/tinsmith"
